--- a/style.css
+++ b/style.css
@@ -1223,8 +1223,153 @@ body{
 
 
 
+/* menu container ------------------------------------------------------------------------------------------------- */
 
+.our-menu-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: calc(100%-100px);
+}
+.our-menu-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 88px;
+    margin-bottom: 133px;
+}
+.our-menu-text-container *{
+    margin: 0;
+    padding: 0;
+}
 
+.our-menu-text-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    width: 557px;
+}
+
+.our-menu-text-container>h1{
+    color: var(--Neutral-07, #2C2F24);
+    text-align: center;
+    font-family: Playfair Display;
+    font-size: 100px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 96px;
+}
+
+.our-menu-text-container>p{
+    color: var(--Neutral-06, #495460);
+    text-align: center;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px;
+}
+
+.our-menu-content-division{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+}
+
+.our-menu-buttons-container ul{
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    display: flex;
+    gap: 15px;
+}
+
+.our-menu-buttons-container > ul li button{
+    display: flex;
+    width: 111px;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+    background: #FFFFFF;
+    border: 1px solid black;
+}
+
+.our-menu-buttons-container .button-all{
+    background: #AD343E;
+}
+
+.our-menu-cards-container{
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-template-rows: auto auto;
+    gap: 24px;
+}
+
+.our-menu-cards-container .menu-card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 12px;
+    border: 1.5px solid var(--Neutral-03, #DBDFD0);
+    background: var(--Neutral-01, #FFF);
+    gap: 30px;
+}
+
+.our-menu-cards-container .menu-card .img-card{
+    display: flex;
+    border-radius: 12px 12px 0px 0px;
+    height: 230px;
+    flex-shrink: 0;
+}
+.our-menu-cards-container .card-text{
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    margin-bottom: 34px;
+}
+.our-menu-cards-container .card-text *{
+    margin: 0;
+    padding: 0;
+    width: 246px;
+}
+
+.our-menu-cards-container .card-text h3{
+    color: #AD343E;
+    text-align: center;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 30px;
+    letter-spacing: -0.72px;
+}
+
+.our-menu-cards-container .card-text h4{
+    color: var(--Neutral-07, #2C2F24);
+    text-align: center;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 26px;
+}
+
+.our-menu-cards-container .card-text p{
+    color: var(--Neutral-06, #414536);
+    text-align: center;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+}
 
 
 
