--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ body{
 /* ----------------------------------------------------- */
 /* Header */
 .header-container{
+    height: 8rem;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -71,7 +72,6 @@ body{
     font-weight: 600;
     line-height: 29.333px;
     letter-spacing: -0.4px;
-    margin-top: 45px;
 }
 .header-logo-container{
     display: flex;
@@ -85,8 +85,6 @@ body{
     list-style: none;
     display: flex;
     gap: 3px;
-    margin: 50px 0px 0px 0px;
-    
 }
 .menu-button{
     padding: 0;
@@ -101,9 +99,6 @@ body{
     background-color: #FFFFFF;
 }
 
-.book-a-table-button{
-    margin: 30px 80px 0px 0px;
-}
 
 .book-a-table-button > button{
     padding: 12px 24px;
@@ -1452,3 +1447,125 @@ body{
     align-items: center;
 }
 /* ----------------------------------------------------------------------------------------------------- */
+.book-a-table-section{
+
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    background-color: #DBDFD0;
+    height: 500px;
+
+   
+    
+    & .book-a-table-text {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 4rem 0;
+    
+        & h1 {
+        margin: 0;
+        color: #2C2F24;
+        font-family: Playfair Display;
+        font-size: 90px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 96px;
+        margin: 1rem 0;
+        }
+    
+        & >p {
+            margin: 0;
+            color: #414536;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 24px;
+            width: 30rem;
+            text-align: center;
+            padding: 0 0 2rem 0;
+        }
+        
+    }
+
+    & .book-a-table-form{
+        padding: 35px;
+        background-color: #F9F9F7;
+        border-radius: .5rem;
+        display: grid;
+        gap: 1rem;
+        grid-template-rows: repeat(4,auto);
+        grid-template-columns: repeat(2,auto);
+        position: absolute;
+        top: 17rem;
+        z-index: 999;
+        
+
+        & .form-text{
+            font-size: 16px;
+            font-weight: 700;
+            line-height: 24px;
+            text-align: left;
+        }
+        & .form-imput{
+            border-radius: 25px;
+            border: 2px solid #DBDFD0;
+            padding: 15px;
+            width: 200px;
+            height: 15px;
+
+
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 24px;
+            text-align: center;
+        }
+
+        & .imput-style{   
+            border-radius: 25px;
+            border: 2px solid #DBDFD0;
+            padding: 15px;
+            width: 207%;    
+        }
+        & .form-choices{
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 24px;
+            text-align: center;
+        }
+
+        & .form-btn{
+            grid-column: span 2;
+
+            border-radius: 25px;
+            border: 2px solid #DBDFD0;
+            padding: 15px;
+            background-color: #AD343E;
+            
+
+            font-size: 16px;
+            font-weight: 700;
+            line-height: 24px;
+            text-align: center;
+            color: #FFFFFF;
+
+            
+        }
+    }
+}
+
+.book-map>.book-img {
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+
+
+/* ----------------------------------------------------------------------------------------------------- */
+
